DMC-E系列控制卡例程/VB6.0/例3_回原点运动/LTDMC.bas

       
        Declare Function dmc_set_pwm_onoff_duty Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal pwm_no As Integer, ByVal fOnDuty As Double, ByVal fOffDuty As Double) As Integer
        Declare Function dmc_get_pwm_onoff_duty Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal pwm_no As Integer, ByRef fOnDuty As Double, ByRef fOffDuty As Double) As Integer
        Declare Function dmc_conti_delay_pwm_to_start Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal pwm_no As Integer, ByVal on_off As Integer, ByVal delay_value As Double, ByVal delay_mode As Integer, ByVal ReverseTime As Double) As Integer
        Declare Function dmc_conti_delay_pwm_to_stop Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal pwm_no As Integer, ByVal on_off As Integer, ByVal delay_time As Integer, ByVal ReverseTime As Double) As Integer
        Declare Function dmc_conti_ahead_pwm_to_stop Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal pwm_no As Integer, ByVal on_off As Integer, ByVal ahead_value As Double, ByVal ahead_mode As Integer, ByVal ReverseTime As Double) As Integer
        Declare Function dmc_conti_write_pwm Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal pwm_no As Integer, ByVal on_off As Integer, ByVal ReverseTime As Double) As Integer

        Declare Function dmc_set_da_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal enable As Integer) As Integer
        Declare Function dmc_get_da_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef enable As Integer) As Integer
        Declare Function dmc_set_da_output Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByVal Vout As Double) As Integer
        Declare Function dmc_get_da_output Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByRef Vout As Double) As Integer
        Declare Function dmc_get_ad_input Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByRef Vout As Double) As Integer
        
        Declare Function dmc_conti_set_da_output Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal channel As Integer, ByVal Vout As Double) As Integer
        Declare Function dmc_conti_set_da_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal enable As Integer, ByVal channel As Integer, ByVal mark As Long) As Integer
        
        Declare Function dmc_conti_set_da_follow_speed Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal da_no As Integer, ByVal MaxVel As Double, ByVal MaxValue As Double, ByVal acc_offset As Double, ByVal dec_offset As Double, ByVal acc_dist As Double, ByVal dec_dist As Double) As Integer
        Declare Function dmc_conti_get_da_follow_speed Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal da_no As Integer, ByRef MaxVel As Double, ByRef MaxValue As Double, ByRef acc_offset As Double, ByRef dec_offset As Double, ByRef acc_dist As Double, ByRef dec_dist As Double) As Integer
        
        Declare Function dmc_set_arc_limit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal enable As Integer, ByVal MaxCenAcc As Double, ByVal MaxArcError As Double) As Integer
        Declare Function dmc_get_arc_limit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef enable As Integer, ByRef MaxCenAcc As Double, ByRef MaxArcError As Double) As Integer

        '3800,3600,5800,5600专用 CAN-IO扩展
        Declare Function dmc_set_can_state Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal NodeNum As Integer, ByVal state As Integer, ByVal baud As Integer) As Integer
        Declare Function dmc_get_can_state Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef NodeNum As Integer, ByRef state As Integer) As Integer
        Declare Function dmc_write_can_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal bitno As Integer, ByVal on_off As Integer) As Integer
        Declare Function dmc_read_can_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal bitno As Integer) As Integer
        Declare Function dmc_read_can_inbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal bitno As Integer) As Integer
        Declare Function dmc_write_can_outport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal portno As Integer, ByVal outport_val As Long) As Integer
        Declare Function dmc_read_can_outport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal portno As Integer) As Long
        Declare Function dmc_read_can_inport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal portno As Integer) As Long
        Declare Function dmc_get_can_errcode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef errcode As Integer) As Integer
        
        Declare Function dmc_get_can_errcode_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef errcode As Integer, ByRef msg_losed As Integer, ByRef emg_msg_num As Integer, ByRef lostHeartB As Integer, ByRef EmgMsg As Integer) As Integer

        Declare Function dmc_t_pmove_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal posi_mode As Integer) As Integer  '对称T型定长
        Declare Function dmc_ex_t_pmove_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal posi_mode As Integer) As Integer '非对称T型定长
        Declare Function dmc_s_pmove_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal posi_mode As Integer) As Integer    '对称S型定长
        Declare Function dmc_ex_s_pmove_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal posi_mode As Integer) As Integer  '非对称S型定长
        
        '软锁存
        Declare Function dmc_softltc_set_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByVal ltc_enable As Integer, ByVal ltc_mode As Integer, ByVal ltc_inbit As Integer, ByVal ltc_logic As Integer, ByVal filter As Double) As Integer
        Declare Function dmc_softltc_get_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByRef ltc_enable As Integer, ByRef ltc_mode As Integer, ByRef ltc_inbit As Integer, ByRef ltc_logic As Integer, ByRef filter As Double) As Integer
        
        Declare Function dmc_softltc_set_source Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByVal axis As Integer, ByVal ltc_source As Integer) As Integer
        Declare Function dmc_softltc_get_source Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByVal axis As Integer, ByRef ltc_source As Integer) As Integer
        
        Declare Function dmc_softltc_reset Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer) As Integer
        Declare Function dmc_softltc_get_number Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByVal axis As Integer, ByRef number As Integer) As Integer
        Declare Function dmc_softltc_get_value_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByVal axis As Integer, ByRef Value As Double) As Integer
        
        Declare Function dmc_set_IoFilter Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal filter As Double) As Integer
        Declare Function dmc_get_IoFilter Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef filter As Double) As Integer
        
        
        Declare Function dmc_set_lsc_index_value Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal IndexID As Integer, ByVal IndexValue As Long) As Integer
        Declare Function dmc_get_lsc_index_value Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal IndexID As Integer, ByRef IndexValue As Long) As Integer
        
        Declare Function dmc_set_lsc_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Origin As Integer, ByVal Interal As Long, ByVal NegIndex As Long, ByVal PosIndex As Long, ByVal Ratio As Double) As Integer
        Declare Function dmc_get_lsc_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Origin As Integer, ByRef Interal As Long, ByRef NegIndex As Long, ByRef PosIndex As Long, ByRef Ratio As Double) As Integer
        
        Declare Function dmc_set_watchdog Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal enable As Integer, ByVal time As Long) As Integer
        Declare Function dmc_call_watchdog Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer
        
        Declare Function dmc_set_zone_limit_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef axis As Integer, ByRef Source As Integer, ByVal x_pos_p As Long, ByVal x_pos_n As Long, ByVal y_pos_p As Long, ByVal y_pos_n As Long, ByVal action_para As Integer) As Integer
        Declare Function dmc_get_zone_limit_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef axis As Integer, ByRef Source As Integer, ByRef x_pos_p As Long, ByRef x_pos_n As Long, ByRef y_pos_p As Long, ByRef y_pos_n As Long, ByRef action_para As Integer) As Integer
        Declare Function dmc_set_zone_limit_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal enable As Integer) As Integer
        
        Declare Function dmc_set_interlock_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef axis As Integer, ByRef Source As Integer, ByVal delta_pos As Long, ByVal action_para As Integer) As Integer
        Declare Function dmc_get_interlock_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef axis As Integer, ByRef Source As Integer, ByRef delta_pos As Long, ByRef action_para As Integer) As Integer
        Declare Function dmc_set_interlock_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal enable As Integer) As Integer
       
        Declare Function dmc_set_grant_error_protect Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal dstp_error As Long, ByVal emg_error As Long) As Integer
        Declare Function dmc_get_grant_error_protect Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef dstp_error As Long, ByRef emg_error As Long) As Integer
            
        Declare Function dmc_set_camerablow_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal camerablow_en As Integer, ByVal cameraPos As Long, ByVal piece_num As Integer, ByVal piece_distance As Long, ByVal axis_sel As Integer, ByVal latch_distance_min As Long) As Integer
        Declare Function dmc_get_camerablow_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef camerablow_en As Integer, ByRef cameraPos As Long, ByRef piece_num As Integer, ByRef piece_distance As Long, ByRef axis_sel As Integer, ByRef latch_distance_min As Long) As Integer
        Declare Function dmc_clear_camerablow_errorcode Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer
        Declare Function dmc_get_camerablow_errorcode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef errorcode As Integer) As Integer
        
        Declare Function dmc_set_encoder_da_follow_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer) As Integer
        Declare Function dmc_get_encoder_da_follow_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer) As Integer
        
        Declare Function dmc_set_io_limit_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal portno As Integer, ByVal enable As Integer, ByVal axis_sel As Integer, ByVal el_mode As Integer, ByVal el_logic As Integer) As Integer
        Declare Function dmc_get_io_limit_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal portno As Integer, ByRef enable As Integer, ByRef axis_sel As Integer, ByRef el_mode As Integer, ByRef el_logic As Integer) As Integer
